all passing, bonus done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <h1>Visit our website at: <a href="https://parzidog.github.io/">parzidog.gihub.io</a></h1>
   <div class="column-container">
     <div class="column">
       <div class="container left">
